# caretalkergpt

./: package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: menu.js  menu.svelte
src/routes/: +page.svelte
